<resources>
    <string name="app_name">Tarifle</string>
    <string name="homepage_tarifle">TARİFLE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tabitem_tariflerim">Tariflerim</string>
    <string name="tabitem_favorilerim">Favorilerim</string>

    <string name="kaydet">Kaydet</string>
    <string name="resim_ekle">Resim Ekle</string>
    <string name="baslik">Yemeğin ismini giriniz</string>
    <string name="malzeme">Malzemeleri giriniz</string>
    <string name="tarif">Tarifi giriniz</string>
    <string name="resim_ekleyiniz">Resim ekleyiniz</string>
    <string-array name="Kategoriler">
        <item>Ana Yemekler</item>
        <item>Ara Sıcaklar</item>
        <item>Çorbalar</item>
        <item>Tatlılar</item>
        <item>Salatalar</item>
        <item>İçecekler</item>
    </string-array>

    <string-array name="button_names">
        <item>Ana Yemekler</item>
        <item>Ara Sıcaklar</item>
        <item>Çorbalar</item>
        <item>Tatlılar</item>
        <item>Salatalar</item>
        <item>İçecekler</item>
    </string-array>


</resources>